2006-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (handle_chunker_result): make sure that
						       est_size > act-size.

2006-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/chunker.c: Read the START command to set the datestamp.
	* server-src/driver.c: Send a START command to the chunker.
	* server-src/driverio.c (chunker_cmd): Add the START command.
	* server-src/server_util.c (cmdstr): Add the START command.
	* server-src/server_util.h (cmd_t): Add the START command.

2006-04-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.c: Add update command.

2006-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb4-security.c: Increase timeout to 60 seconds.
	* common-src/rsh-security.c: Increase timeout to 60 seconds.
	* common-src/ssh-security.c: Increase timeout to 60 seconds.

2006-04-07  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/amrestore.c: reset count_error to 0 on a restore.

2006-04-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Change expression to remove overflow.

2006-03-29  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c: Don't use declaration after instruction,
	  older compiler don't accept it.

2006-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.5.0 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.0).
	* NEWS: Update for 2.5.0

2006-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: wait for compress/index/encryp subprocess.

2006-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Parse PARTIAL reply.

2006-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Put '#define HOLD_DEBUG' in comment.

2006-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/chunker.c: Don't loop on startup_chunker.
	* server-src/dumper.c: Don't wait for all children, some process (ssh)
	  might not terminate.
