@@ -1,3 +1,6 @@
+2006-04-24  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/planner.c: Fix divide by zero if runtapes==0.
+
 2006-04-23  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/driver.c (handle_chunker_result): make sure that
 						       est_size > act-size.
